@@ -1666,10 +1666,12 @@ A command for the unlinking of rooms from each other.
 
 GMODIFY=\
 Command : GMODIFY\n\r\
-Usage   : GMODIFY (AREA/ROOM/WORLD) [FIELD=VAL](&&/||[...]) (CHANGE=[FIELD=VAL])\n\r\
+Usage   : GMODIFY (AREA/ROOM/WORLD/PLAYERS) [FIELD=VAL](&&/||[...]) 
+Usage   :         (CHANGE=[FIELD=VAL])\n\r\
 Example : gmodify area class=genmob&&name=the cityguard change=name=the guard\n\r\
 Example : gmodify world class=[cs]GenMob&&name=[ss]city change=name=[ss]\n\r\
 Example : gmodify world class=[cs]GenItem&&name=a rusty sword change=destroy=true\n\r\
+Example : gmodify players charclass=Fighter\n\r\
 Example : gmodify ?\n\r\
 Short(s): \n\r\
 A command to select objects in a given area, room, or the whole world \
